--- a/package.json
+++ b/package.json
@@ -20,9 +20,20 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^6.4.4"
+    "express-rate-limit": "^6.4.0",
+    "helmet": "^5.1.0",
+    "http-status-codes": "^2.2.0",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.4",
+    "rate-limiter": "^0.2.0",
+    "swagger-ui-express": "^4.4.0",
+    "xss-clean": "^0.1.1",
+    "yamljs": "^0.3.0"
   }
 }
